[package]
name = "arendal-ast"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arcstr = { workspace = true }
phf = { workspace = true }
rand = { workspace = true }
id = { path = "../arendal-id", package = "arendal-id" }
