[package]
name = "arendal-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arcstr = "1.1.5"
data-encoding = "2.3.3"
im = "15.1.0"
num = { path = "../arendal-num", package = "arendal-num" }
phf = { version = "0.11.1", features = ["macros"] }
# unicode-segmentation = "1.10.0"
