[package]
name = "arendal-core"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arcstr = { workspace = true }
data-encoding = { workspace = true }
im = "15.1.0"
num = { path = "../arendal-num", package = "arendal-num" }
ast = { path = "../arendal-ast", package = "arendal-ast" }
phf = { workspace = true }
# unicode-segmentation = "1.10.0"
