[package]
name = "arendal-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arendal-error = { path= "../arendal-error" }
arendal-ast = { path= "../arendal-ast" }
# unicode-segmentation = "1.10.0"
