[package]
name = "arendal-parser"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arcstr = { workspace = true }
num = { path = "../arendal-num", package = "arendal-num" }
id = { path = "../arendal-id", package = "arendal-id" }
ast = { path = "../arendal-ast", package = "arendal-ast" }
