[package]
name = "arendal-typecheck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = { path = "../arendal-num", package = "arendal-num" }
ast = { path = "../arendal-ast", package = "arendal-ast" }
