[package]
name = "arendal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { path = "../arendal-core", package = "arendal-core" }
parser = { path = "../arendal-parser", package = "arendal-parser" }
twi = { path = "../arendal-twi", package = "arendal-twi" }
rustyline = "10.1.1"
